--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     </script>
 </head>
 <body>
-    <p> hello world</p>
-    <p id="ans"></p>
-    <button onclick="solveIt(1234)">solve it </button>
+    <div id="content">
+        <p> Enter coma separated values</p>
+        <input type="text" id="input"><br>
+        <p> Enter Total </p><input type="number" id="total"><br>
+        <p id="ans"></p>
+        <button onclick="processIt()">solve it </button>
+    </div>
 </body>
 </html>
